Update hero image to new shrine/altar loot art

--- a/loot.html
+++ b/loot.html
@@ -53,8 +53,8 @@
     <section class="hero" id="top">
       <div class="hero-inner">
         <div class="hero-image">
-          <!-- You can swap this for a treasure/altar image later if you want -->
-          <img src="images/cover-tiamat-avernus.jpg" alt="Tiamat rising over a hellish citadel above a hoard of treasure">
+          <!-- New shrine/altar loot art -->
+          <img src="images/loot-hero-shrine.jpg" alt="Ancient dragon shrine glowing over a hoard of artifacts and relics">
         </div>
         <div class="hero-content">
           <div class="hero-tag">
@@ -202,4 +202,5 @@
   </footer>
 </body>
 </html>
+
 
