--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           <li><a href="party.html">Party</a></li>
           <li><a href="loot.html">Loot</a></li>
           <li><a href="locations.html">Places</a></li>
+          <li><a href="world-map.html">World Map</a></li>
           <li><a href="sessions.html">Sessions</a></li>
         </ul>
       </nav>
@@ -53,7 +54,6 @@
     <section class="hero" id="top">
       <div class="hero-inner">
         <div class="hero-image">
-          <!-- Replace src with your Tiamat/Avernus cover art file -->
           <img src="images/cover-tiamat-avernus.jpg" alt="Tiamat rising over a hellish citadel as the party stands against her">
         </div>
         <div class="hero-content">
@@ -71,7 +71,6 @@
             weaves a new cocoon of divinity.
           </p>
           <div class="hero-buttons">
-            <!-- Now go to other pages, not sections on this page -->
             <a href="party.html" class="btn btn-primary">Meet the Party</a>
             <a href="sessions.html" class="btn btn-secondary">Read Session Recaps</a>
           </div>
@@ -153,9 +152,7 @@
         characters, loot, locations, or detailed recaps.
       </p>
 
-      <!-- Re-use loot-grid / loot-card styling as home cards -->
       <div class="loot-grid">
-        <!-- Party -->
         <article class="loot-card">
           <div class="loot-rarity">Characters</div>
           <div class="loot-name">The Party</div>
@@ -169,7 +166,6 @@
           </p>
         </article>
 
-        <!-- Loot -->
         <article class="loot-card">
           <div class="loot-rarity">Treasure</div>
           <div class="loot-name">Relics &amp; Rewards</div>
@@ -183,7 +179,6 @@
           </p>
         </article>
 
-        <!-- Places -->
         <article class="loot-card">
           <div class="loot-rarity">World</div>
           <div class="loot-name">Places They Will See</div>
@@ -197,7 +192,6 @@
           </p>
         </article>
 
-        <!-- Sessions -->
         <article class="loot-card">
           <div class="loot-rarity">Story Log</div>
           <div class="loot-name">Session Recaps</div>
@@ -213,7 +207,7 @@
       </div>
     </section>
 
-    <!-- FOR PLAYERS / HOW TO USE -->
+    <!-- FOR PLAYERS -->
     <section id="for-players">
       <h2>For Players</h2>
       <p class="section-subtitle">
