Add 'World Map' link and update hero section comment

--- a/party.html
+++ b/party.html
@@ -34,6 +34,7 @@
           <li><a href="party.html">Party</a></li>
           <li><a href="loot.html">Loot</a></li>
           <li><a href="locations.html">Places</a></li>
+          <li><a href="world-map.html">World Map</a></li>
           <li><a href="sessions.html">Sessions</a></li>
         </ul>
       </nav>
@@ -42,7 +43,7 @@
 
   <main>
 
-    <!-- HERO / COVER (Updated with new hero art) -->
+    <!-- HERO / COVER -->
     <section class="hero" id="top">
       <div class="hero-inner">
         <div class="hero-image">
@@ -90,6 +91,7 @@
       </p>
 
       <div class="party-grid">
+
         <!-- Lyrixia -->
         <article class="party-card">
           <img src="images/lyrixia.jpg" alt="Lyrixia, tiefling bard">
@@ -214,5 +216,6 @@
   </footer>
 </body>
 </html>
+
 
 
