Add World Map link to navigation

--- a/loot.html
+++ b/loot.html
@@ -42,6 +42,7 @@
           <li><a href="party.html">Party</a></li>
           <li><a href="loot.html">Loot</a></li>
           <li><a href="locations.html">Places</a></li>
+          <li><a href="world-map.html">World Map</a></li>
           <li><a href="sessions.html">Sessions</a></li>
         </ul>
       </nav>
@@ -53,7 +54,6 @@
     <section class="hero" id="top">
       <div class="hero-inner">
         <div class="hero-image">
-          <!-- New shrine/altar loot art -->
           <img src="images/loot-hero-shrine.jpg" alt="Ancient dragon shrine glowing over a hoard of artifacts and relics">
         </div>
         <div class="hero-content">
@@ -202,5 +202,6 @@
   </footer>
 </body>
 </html>
+
 
 
