--- a/world-map.html
+++ b/world-map.html
@@ -36,14 +36,14 @@
         <span class="nav-toggle-bar"></span>
       </button>
 
-      <nav class="main-nav">
+     <nav class="main-nav">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="party.html">Party</a></li>
           <li><a href="loot.html">Loot</a></li>
           <li><a href="locations.html">Places</a></li>
+          <li><a href="world-map.html">World Map</a></li>
           <li><a href="sessions.html">Sessions</a></li>
-          <li><a href="world-map.html" aria-current="page">World Map</a></li>
         </ul>
       </nav>
     </div>
